--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </div>
     </div>
   </div>
-  <script type="module" src="/src/main.jsx"></script>
 </body>
 
+<script type="module" src="./src/main.jsx"></script>
 </html>
